[package]
name = "rflask"
version = "0.1.0"
authors = ["gotham <lixiao187@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#awf-help = "0.1"
awf-help = {path ="./awf-help"}
actix-web = "1.0"
inventory = "0.1"
serde ="1.0"
derive_more ={version="0.15", required-features=["deref","deref_mut"]}
derive-new="0.5"

